[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "okf-mcp"
version = "0.3.0"
description = "MCP server for Open Knowledge Format (OKF) bundles — expose okf-ingest's deterministic consume verbs (search, context, graph impact, diff, doctor) as agent tools."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Travis Jakel", email = "travis.s.jakel@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "okf-ingest>=0.9.0",
    "mcp>=1.2",
]
keywords = ["okf", "open-knowledge-format", "mcp", "model-context-protocol", "knowledge-graph", "duckdb"]

[project.urls]
Homepage = "https://github.com/travisjakel/okf-mcp"

[project.scripts]
okf-mcp = "okf_mcp.server:main"

[tool.setuptools]
packages = ["okf_mcp"]
